--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         
         <ul >
          <li class="menu"><a href="#autor"> Edgar Allan Poe</a></li>
-         <li><a href="/Corazon_delator/index.html">El corazon Delator</a></li>
-         <li><a href="/Descenso_maelstrom/index.html">Un descenso almastrom</a></li>
-         <li><a href="/Mascara_muerte/index.html">La mascara de la muerte roja</a></li>
-         <li><a href="/Retrato_oval/index.html">El Retrato oval</a></li>
-         <li><a href="/Tunel_amontillado/index.html">El tonel del amontillado</a></li>
+         <li><a href="/Corazon_delator/">El corazon Delator</a></li>
+         <li><a href="/Descenso_maelstrom/">Un descenso almastrom</a></li>
+         <li><a href="/Mascara_muerte/">La mascara de la muerte roja</a></li>
+         <li><a href="/Retrato_oval/">El Retrato oval</a></li>
+         <li><a href="/Tunel_amontillado/">El tonel del amontillado</a></li>
      </ul>
       </div>
       <div class="cuentosprincipal">
