--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
          <li><a href="/Descenso_maelstrom/">Un descenso almastrom</a></li>
          <li><a href="/Mascara_muerte/">La mascara de la muerte roja</a></li>
          <li><a href="/Retrato_oval/">El Retrato oval</a></li>
-         <li><a href="/Tunel_amontillado/">El tonel del amontillado</a></li>
+         <li><a href="/Tonel/">El tonel del amontillado</a></li>
      </ul>
       </div>
       <div class="cuentosprincipal">
